# QuatIca

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  Dockerfile  JUPYTER_SETUP_GUIDE.md  PUBLISH.md  QuatIca_Core_Functionality_Demo.ipynb  QuatIca_Core_Functionality_Demo.py  README.md  README_Demo.md  README_PYPI.md  index.html  mkdocs.yml  objects.inv  publish.py  pyproject.toml  requirements.txt  run_analysis.py  sitemap.xml
.github/workflows/: docs.yml  release.yml
References_and_SuppMat/: Rough_Ideas_BrainStorming.docx
api/data_gen/: index.html
api/qslst/: index.html
api/solver/: index.html
api/tensor/: index.html
api/utils/: index.html
api/visualization/: index.html
applications/image_completion/: index.html  script_real_image_completion.py  script_small_image_completion.py  script_synthetic_image_completion.py
applications/image_deblurring/: index.html  optimize_lambda.py  run_deblur_benchmark.py  script_image_deblurring.py  visualize_results.py
applications/lorenz_attractor/: index.html
applications/signal_processing/: __init__.py  benchmark_lorenz_methods.py  calculate_lorenz_table.py  lorenz_attractor_qgmres.py
core/: __init__.py  data_gen.py  qslst.py  solver.py  tensor.py  utils.py  visualization.py
core/decomp/: LU.py  README.md  __init__.py  eigen.py  hessenberg.py  qsvd.py  schur.py  tridiagonalize.py
docs/: examples.md  getting-started.md  index.md  troubleshooting.md
docs/api/: data_gen.md  qslst.md  solver.md  tensor.md  utils.md  visualization.md
docs/applications/: image_completion.md  image_deblurring.md  lorenz_attractor.md
examples/: index.html
getting-started/: index.html
quatica/: __init__.py  data_gen.py  qslst.py  solver.py  tensor.py  utils.py  visualization.py
quatica/decomp/: LU.py  README.md  __init__.py  eigen.py  hessenberg.py  qsvd.py  schur.py  tridiagonalize.py
scripts/: debug_residual.py  download_sample_image.py
search/: search_index.json
tests/: schur_demo.py  test_jupyter_setup.py  tutorial_quaternion_basics.py
tests/QGMRES/: __init__.py  benchmark_qgmres_accuracy.py  benchmark_qgmres_preconditioner.py  test_qgmres_large.py  test_qgmres_solver.py
tests/decomp/: __init__.py  benchmark_qsvd_performance.py  benchmark_qsvd_performance_with_plots.py  eigenvalue_demo.py  qsvd_performance_summary.py  test_LU.py  test_eigen.py  test_hessenberg.py  test_qsvd.py  test_schur.py  test_tridiagonalize.py
tests/pseudoinverse/: analyze_cifar10_pseudoinverse.py  analyze_multiple_images_pseudoinverse.py  analyze_pseudoinverse.py  script_synthetic_matrices.py
tests/unit/: README.md  __init__.py  benchmark_pseudoinverse_methods.py  compare_ns_vs_higher_order.py  test_basic_algebra.py  test_cgneq_column.py  test_compare_schur_experimental.py  test_compare_schur_variants.py  test_cur_decomposition.py  test_deep_linear_comprehensive.py  test_deep_linear_solver.py  test_det_demonstration.py  test_experimental_power_iteration.py  (+27 more)
troubleshooting/: index.html
validation_output/: pinv_benchmark_summary_20250819_051354.csv  schur_diag_n12_seed1.json  schur_diag_n12_seed7.json  schur_diag_n16_seed1.json  schur_diag_n16_seed7.json  schur_diag_n20_seed1.json  schur_diag_n20_seed11.json  schur_diag_n20_seed7.json
(+22 files in other folders)
