[project]
name = "quatica"
version = "0.1.4"
description = "Numerical linear algebra for quaternions — fast, practical, and well‑tested"
authors = [
    {name = "Valentin Leplat", email = "valentin.leplat@gmail.com"},
    {name = "Dmitry Beresnev", email = "dmitry.beresnev@gmail.com"}
]
license = { text = "CC0-1.0" }
readme = "README_PYPI.md"
requires-python = ">=3.11"
keywords = ["quaternion", "linear-algebra", "matrix", "decomposition", "svd", "pseudoinverse", "gmres"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "numpy-quaternion>=2024.0.10",
    "scikit-learn>=1.5.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.0",
]

[project.urls]
Homepage = "https://vleplat.github.io/QuatIca/"
Documentation = "https://vleplat.github.io/QuatIca/"
Repository = "https://github.com/vleplat/QuatIca"
"Bug Tracker" = "https://github.com/vleplat/QuatIca/issues"
"Colab Demo" = "https://colab.research.google.com/drive/1LQMnpGdSiWZsXjZQrMp1BmVT9Uzt_CKM?usp=sharing"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.8",
]


[tool.ruff]
extend-include = ["*.ipynb"]
fix=true
unsafe-fixes=true
line-length=90

[tool.ruff.lint]
extend-select = ["I"]
ignore=["E402"]


# Building

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "quatica"
module-root = ""


# Publishing
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

# To test (uv publish --index testpypi)
[tool.uv.sources]
quatica = { index = "testpypi" }
